# gnome-typescript-template

./: .eslintignore  .eslintrc.json  .gitignore  .ts-for-girrc.js  README.md  docs.json  io.github.charlieqle.GnomeTypescriptTemplate.json  meson.build  package.json  rollup.config.js  tsconfig.alias.json  tsconfig.json
@types/: adw-1.d.ts  ambient.d.ts  appstreamcompose-1.0.d.ts  gdkx11-4.0-ambient.d.ts  glib-2.0.d.ts  global.d.ts  gsk-4.0.d.ts  gstcuda-1.0.d.ts  handy-1.d.ts  harfbuzz-0.0.d.ts  javascriptcore-6.0-ambient.d.ts  xmlb-2.0.d.ts
@types/Gjs/: Adw-1.d.ts  AppIndicator3-0.1.d.ts  AppStreamGlib-1.0.d.ts  Atk-1.0.d.ts  Atspi-2.0.d.ts  CloudProviders-0.3.d.ts  DBus-1.0.d.ts  DBusGLib-1.0.d.ts  Dbusmenu-0.4.d.ts  GCab-1.0.d.ts  GDesktopEnums-3.0.d.ts  GIRepository-2.0.d.ts  GL-1.0.d.ts  GLib-2.0.d.ts  GModule-2.0.d.ts  GObject-2.0.d.ts  GUdev-1.0.d.ts  Gck-2.d.ts  Gcr-4.d.ts  Gdk-4.0.d.ts  GdkPixbuf-2.0.d.ts  GdkPixdata-2.0.d.ts  GdkWayland-4.0.d.ts  GdkX11-4.0.d.ts  Gee-0.8.d.ts  Geoclue-2.0.d.ts  Gio-2.0.d.ts  GnomeAutoar-0.1.d.ts  GnomeAutoarGtk-0.1.d.ts  Graphene-1.0.d.ts  Gsk-4.0.d.ts  Gst-1.0.d.ts  GstAllocators-1.0.d.ts  GstApp-1.0.d.ts  GstAudio-1.0.d.ts  GstBadAudio-1.0.d.ts  GstBase-1.0.d.ts  GstCheck-1.0.d.ts  GstCodecs-1.0.d.ts  GstController-1.0.d.ts  (+56 more)
@types/gi-types/: adw1.d.ts  atk1.d.ts  atspi2.d.ts  cloudproviders0.d.ts  gdk4.d.ts  gdkwayland4.d.ts  gdkx113.d.ts  gdkx114.d.ts  gnomeautoar0.d.ts  gnomeautoargtk0.d.ts  gsk4.d.ts  gst1.d.ts  gstbase1.d.ts  gstcheck1.d.ts  gstcontroller1.d.ts  gstnet1.d.ts  gtk4.d.ts  gtksource5.d.ts  ical3.d.ts  icalglib3.d.ts  javascriptcore5.d.ts  json1.d.ts  pango1.d.ts  pangoxft1.d.ts  soup3.d.ts  webkit25.d.ts  webkit2webextension5.d.ts
data/: desktop.in  gschema.xml  io.github.charlieqle.GnomeTypescriptTemplate.data.gresource.xml  io.github.charlieqle.GnomeTypescriptTemplate.desktop.in  meson.build
data/resources/: data.gresource.xml  io.github.charlieqle.GnomeTypescriptTemplate.data.gresource.xml  meson.build  style.css
data/resources/icons/: meson.build
data/resources/ui/: main-window.blp  menu-button.blp  settings-window.blp  theme-switcher.blp
data/ui/: window.blp
gir/: AppStream-1.0.gir  Atk-1.0.gir  Atspi-2.0.gir  GIRepository-2.0.gir  GLib-2.0.gir  Gdk-3.0.gir  Gdk-4.0.gir  GdkPixbuf-2.0.gir  Gee-0.8.gir  Gsk-4.0.gir  GstCodecs-1.0.gir  GstGL-1.0.gir  GstVa-1.0.gir  HarfBuzz-0.0.gir  JavaScriptCore-4.1.gir  JavaScriptCore-6.0.gir  Manette-0.2.gir  Nice-0.1.gir  Tracker-3.0.gir  WebKit-6.0.gir  WebKit2-4.1.gir  WebKit2WebExtension-4.1.gir  Xmlb-2.0.gir
girs/: Atspi-2.0.gir  GCab-1.0.gir  GUdev-1.0.gir  GstApp-1.0.gir  GstGL-1.0.gir  GstGLEGL-1.0.gir  GstSdp-1.0.gir  IBus-1.0.gir  JavaScriptCore-4.1.gir  JavaScriptCore-6.0.gir  Json-1.0.gir  Manette-0.2.gir  Nice-0.1.gir  Polkit-1.0.gir  WebKit2-4.1.gir  WebKit2WebExtension-4.1.gir
modules/blueprint-compiler/: blueprint-compiler.json
modules/yarn-deps/: generated-sources.json  (+1 more)
po/: POTFILES
scripts/: copy_girs.sh  download_deps.sh  generate-sources.sh  generate_sources.sh
src/: app.ts  application.ts  io.github.charlieqle.GnomeTypescriptTemplate.in  io.github.charlieqle.GnomeTypescriptTemplate.src.gresource.xml  main.ts  meson.build  settings.ts  src.gresource.xml  utility.ts  window.ts
subprojects/: blueprint-compiler.wrap
(+5 files in other folders)
