install_data(
  configure_file(
    input: 'app.svg',
    output: meson.project_name() + '.svg',
    copy: true
  ),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)

install_data(
  configure_file(
    input: 'app.svg',
    output: meson.project_name() + '.svg',
    copy: true
  ),
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps')
)